--- a/index.html
+++ b/index.html
@@ -2,80 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>HTML basics</title>
-              <style>
-
-            #invite {
+        <title>Timothy's cubing stuffs</title>
+        <style>
+            #title {
                 position:fixed;
                 right:35%;
                 top:1px;
             }
-            #s1 {
-                color:red;
-            }
-            #s2 {
-                color:blue;
-            }
-            #place {
-                position:fixed;
-                right:38%;
-                top:40px;
-            }
-            #r {
-                color:red;
-            }
-            #w {
-                color:white;
-            }
-            #b {
-                color:blue;
-            }
-            #r2 {
-                color:red;
-            }
-            #p1 {
-                
-            }
-            #details {
-                position:fixed;
-                right:48%;
-                top:100px;
-            }
-            #deet-list {
-                position:fixed;
-                right:35%;
-                top:120px;
-                font-weight:bold;
-                color:green;
-            }
-            .other-stuff {
-                font-family:cursive;
-                position:fixed;
-                right:25%;
-                top:186px;
-                border:10px ridge blue;
-                padding-right:10px;
-                padding-left:10px;
-                padding-bottom:5px;
-                padding-top:5px;
-            }
-            #img1 {
-                float:left;
-            }
         </style>
     </head>
     <body>
-                <h1 id="invite"><span id="s1">You're</span><span id="s2"> invited!</span></h1>
-        <h2 id="place"><span id="r">4th</span><span id="w"> of</span><span id="b"> July</span><span id="r2"> party</span></h2>
-        
-        <p id="details">The details:</p>
-        <ul id="deet-list">
-            <li>bring one food or drink item</li>
-            <li>burgers will be provided</li>
-        </ul>
-        <h4 class="other-stuff">
-            have fun playing football, having <br>burgers, and celebrating the <br>birthday of our country, The <br> United States Of America
-        </h4>
-        <img id="img1" src="https://upload.wikimedia.org/wikipedia/commons/e/ea/American_flag.jpg">
+        <h1 id="title"> Timothy's <span>Cubing</span> and <span>Minecraft</span> stuffs</h1>
+        <img src="https://static.wikia.nocookie.net/kaboodlesmp/images/1/1a/Clownicon.jpeg/revision/latest?cb=20220814070255">
  </body>
 </html>
