--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
                 right:35%;
                 top:1px;
             }
+            #cubing {
+                color:rgb(5, 130, 255);
+            }
+            #mc {
+                color:rgb(30, 255, 5);
+            }
         </style>
     </head>
     <body>
-        <h1 id="title"> Timothy's <span>Cubing</span> and <span>Minecraft</span> stuffs</h1>
+        <h1 id="title"> Timothy's <span id="cubing">Cubing</span> and <span id="mc">Minecraft</span> stuffs</h1>
+        <p class="side_links></p>
  </body>
 </html>
