--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
                 position:fixed;
                 right:35%;
                 top:1px;
+                border:10px ridge brown;
+                padding-right:5px;
+                padding-left:5px;
+                padding-bottom:2.5px;
+                padding-top:2.5px;
             }
             #cubing {
                 color:rgb(5, 130, 255);
@@ -15,10 +20,22 @@
             #mc {
                 color:rgb(30, 255, 5);
             }
+            #links {
+                position:fixed;
+                right:10%;
+                top:300px;
+                border:3px solid black;
+                padding-right:5px;
+                padding-left:5px;
+                padding-bottom:2.5px;
+                padding-top:2.5px;
+            }
         </style>
     </head>
     <body>
-        <h1 id="title"> Timothy's <span id="cubing">Cubing</span> and <span id="mc">Minecraft</span> stuffs</h1>
-        <p class="side_links></p>
+        <h1 id="title"> Timothy's <span id="cubing">Cubing</span> stuffs</h1>
+        <ul id="links">
+            <li>All my cubing prs<a href="https://www.worldcubeassociation.org/persons/2024KEAR01"></li>
+        </ul>
  </body>
 </html>
