--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Timothy's cubing stuffs</title>
         <style>
+            body {
+                background-color:rgb(189, 255, 251);
+            }
             #title {
                 position:fixed;
                 right:35%;
@@ -22,7 +25,7 @@
             }
             #links {
                 position:fixed;
-                right:10%;
+                left:2%;
                 top:300px;
                 border:3px solid black;
                 padding-right:5px;
@@ -33,7 +36,7 @@
         </style>
     </head>
     <body>
-        <h1 id="title"> Timothy's <span id="cubing">Cubing</span> stuffs</h1>
+        <h1 id="title"> Timothy's <span id="cubing">Cubing</span> info</h1>
         <ul id="links">
             <li>All my cubing prs<a href="https://www.worldcubeassociation.org/persons/2024KEAR01"></li>
         </ul>
