--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Timothy's cubing stuffs</title>
+        <title>Timothy's cubing info</title>
         <style>
             body {
                 background-color:rgb(189, 255, 251);
+                font-family:calibri;
+            }
+            p {
+                background-color:light-blue;
+                color:white;
             }
             #title {
                 position:fixed;
-                right:35%;
+                right:38%;
                 top:1px;
-                border:10px ridge brown;
+                background-color:rgb(66, 208, 255);
                 padding-right:5px;
                 padding-left:5px;
                 padding-bottom:2.5px;
@@ -19,9 +24,6 @@
             }
             #cubing {
                 color:rgb(5, 130, 255);
-            }
-            #mc {
-                color:rgb(30, 255, 5);
             }
             #links {
                 position:fixed;
@@ -32,13 +34,37 @@
                 padding-left:5px;
                 padding-bottom:2.5px;
                 padding-top:2.5px;
+                background-color:white;
+                font-family:monospace;
+            }
+            a:hover {
+                background-color:light-blue;
+            }
+            a:active {
+                background-color:rgb(252, 50, 50);
+                color:red;
+            }
+            #p {
+                position:fixed;
+                right:38%;
+                top:100px;
+                font-family:cursive;
             }
         </style>
     </head>
     <body>
         <h1 id="title"> Timothy's <span id="cubing">Cubing</span> info</h1>
         <ul id="links">
-            <li>All my cubing prs<a href="https://www.worldcubeassociation.org/persons/2024KEAR01"></li>
+            <li><a href="https://www.worldcubeassociation.org/persons/2024KEAR01" All my current competition prs></li>
+            <li><a href="https://www.youtube.com/channel/UCUrIcBNgiLD8e6289xnC6Jg" My cubing yoytube channel</li>
+            <li><a href="https://cstimer.net/" The best cubing training timer</li>
         </ul>
+                <p id="p">Hi! My name is Timothy (or Tim if you like) and I am a speed cuber, coder, and baseball player<br> I average about 18 seconds to solve a
+                <a href="https://ae01.alicdn.com/kf/HTB1jLY7XELrK1Rjy0Fjq6zYXFXac/D-FantiX-Gan-356-R-3x3-Speed-Cube-Stickerless-Gans-356R-3x3x3-Magic-Cube-Puzzle-GES.jpg" 3x3 >,
+                5 to solve a < a href="https://i5.walmartimages.com/asr/1714f967-fc93-468f-ac6c-a6ff70d602fe.a4c808a11f1329dc85c70bfbc96fb076.jpeg"2x2 > and 10 to solve a 
+                <a href="https://cdn.awsli.com.br/800x800/942/942147/produto/39865435/0236cafb1f.jpg" pyraminx><br> I can solve other cubes as well but those are the ones I like the most<br> In baseball, I play catcher. 
+                I have a best pop time of 2.33 seconds (as timed by coach rodger) and I just generally love playing the position<br> I am pretty decent at coding as well as you can see by this web page you are vewing<br>
+                I also have a 14.52 3x3 solve time at home and a 0.66 second 4 mover for 2x2 at home.
+                </p>
  </body>
 </html>
