--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <h1 id="title"> Timothy's <span id="cubing">Cubing</span> info</h1>
         <ul id="links">
             <li><a href="https://www.worldcubeassociation.org/persons/2024KEAR01" All my current competition prs></li>
-            <li><a href="https://www.youtube.com/channel/UCUrIcBNgiLD8e6289xnC6Jg" My cubing yoytube channel</li>
-            <li><a href="https://cstimer.net/" The best cubing training timer</li>
+            <li><a href="https://www.youtube.com/channel/UCUrIcBNgiLD8e6289xnC6Jg" My cubing yoytube channel></li>
+            <li><a href="https://cstimer.net/" The best cubing training timer></li>
         </ul>
                 <p id="p">Hi! My name is Timothy (or Tim if you like) and I am a speed cuber, coder, and baseball player<br> I average about 18 seconds to solve a
                 <a href="https://ae01.alicdn.com/kf/HTB1jLY7XELrK1Rjy0Fjq6zYXFXac/D-FantiX-Gan-356-R-3x3-Speed-Cube-Stickerless-Gans-356R-3x3x3-Magic-Cube-Puzzle-GES.jpg" 3x3 >,
