--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 right:38%;
                 top:100px;
                 font-family:cursive;
+                border: 3px solid blue;
+                padding-right:5px;
+                padding-left:5px;
+                padding-bottom:2.5px;
+                padding-top:2.5px;
             }
         </style>
     </head>
@@ -63,7 +68,7 @@
                 <a href="https://ae01.alicdn.com/kf/HTB1jLY7XELrK1Rjy0Fjq6zYXFXac/D-FantiX-Gan-356-R-3x3-Speed-Cube-Stickerless-Gans-356R-3x3x3-Magic-Cube-Puzzle-GES.jpg" 3x3 >,
                 5 to solve a < a href="https://i5.walmartimages.com/asr/1714f967-fc93-468f-ac6c-a6ff70d602fe.a4c808a11f1329dc85c70bfbc96fb076.jpeg"2x2 > and 10 to solve a 
                 <a href="https://cdn.awsli.com.br/800x800/942/942147/produto/39865435/0236cafb1f.jpg" pyraminx><br> I can solve other cubes as well but those are the ones I like the most<br> In baseball, I play catcher. 
-                I have a best pop time of 2.33 seconds (as timed by coach rodger) and I just generally love playing the position<br> I am pretty decent at coding as well as you can see by this web page you are vewing<br>
+                I have a best pop time of 2.33 seconds (as timed by coach Rodger) and I just generally love playing the position<br> I am pretty decent at coding as well as you can see by this web page you are vewing<br>
                 I also have a 14.52 3x3 solve time at home and a 0.66 second 4 mover for 2x2 at home.
                 </p>
  </body>
