--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 padding-left:5px;
                 padding-bottom:2.5px;
                 padding-top:2.5px;
+                background-color:white;
             }
         </style>
     </head>
