--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <body>
         <h1 id="title"> Timothy's <span id="cubing">Cubing</span> info</h1>
         <ul id="links">
-            <li><a href="https://www.worldcubeassociation.org/persons/2024KEAR01" All my current competition prs></li>
-            <li><a href="https://www.youtube.com/channel/UCUrIcBNgiLD8e6289xnC6Jg" My cubing yoytube channel></li>
-            <li><a href="https://cstimer.net/" The best cubing training timer></li>
+            <li><a href="https://www.worldcubeassociation.org/persons/2024KEAR01"> All my current competition prs</a></li>
+            <li><a href="https://www.youtube.com/channel/UCUrIcBNgiLD8e6289xnC6Jg"> My cubing yoytube channel</a></li>
+            <li><a href="https://cstimer.net/"> The best cubing training timer</a></li>
         </ul>
                 <p id="p">Hi! My name is Timothy (or Tim if you like) and I am a speed cuber, coder, and baseball player<br> I average about 18 seconds to solve a 3x3,
                 5 to solve a and 10 to solve a 2x2, and 10 to solve a pyraminx
