--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             }
             #p {
                 position:fixed;
-                right:38%;
+                right:10%;
                 top:100px;
                 font-family:cursive;
                 border: 3px solid blue;
@@ -55,6 +55,7 @@
                 padding-bottom:2.5px;
                 padding-top:2.5px;
                 background-color:white;
+                color:black;
             }
         </style>
     </head>
