--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             <li><a href="https://www.youtube.com/channel/UCUrIcBNgiLD8e6289xnC6Jg" targe="_blank"> My cubing yoytube channel</a></li>
             <li><a href="https://cstimer.net/" target="_blank"> The best cubing training timer</a></li>
         </ul>
-                <p id="p">Hi! My name is Timothy (or Tim if you like) and I am a speed cuber, coder, and baseball player<br> I average about 18 seconds to solve a 3x3,
-                5 to solve a and 10 to solve a 2x2, and 10 to solve a pyraminx
+                <p id="p">Hi! My name is Timothy (or Tim if you like) and I am a speed cuber, coder, and baseball player<br> I average about 17 seconds to solve a 3x3,
+                5 to solve a 2x2, and 10 to solve a pyraminx
                 <br> I can solve other cubes as well but those are the ones I like the most<br> In baseball, I play catcher. 
-                I have a best pop time of 2.33 seconds (as timed by coach Rodger) and I just generally love playing the position<br> I am pretty decent at coding as well as you can see by this web page you are vewing<br>
-                I also have a 14.52 3x3 solve time at home and a 0.66 second 4 mover for 2x2 at home.
+                I have a best pop time of 2.33 seconds and I just generally love playing the position<br> I am pretty decent at coding as well as you can see by this web page you are vewing<br>
+                I have a 12.21 3x3 solve time at home and a 0.66 second 4 mover for 2x2 at home. <br> I have a Minecraft Hardcore world where I have survived over 100 days and made many usefull farms
                 </p>
  </body>
 </html>
