--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h1 id="title"> Timothy's <span id="cubing">Cubing</span> info</h1>
         <ul id="links">
             <li><a href="https://www.worldcubeassociation.org/persons/2024KEAR01" target="_blank"> All my current competition prs</a></li>
-            <li><a href="https://www.youtube.com/channel/UCUrIcBNgiLD8e6289xnC6Jg" targe="_blank"> My cubing yoytube channel</a></li>
+            <li><a href="https://www.youtube.com/channel/UCUrIcBNgiLD8e6289xnC6Jg" targe="_blank"> My cubing youtube channel</a></li>
             <li><a href="https://cstimer.net/" target="_blank"> The best cubing training timer</a></li>
         </ul>
                 <p id="p">Hi! My name is Timothy (or Tim if you like) and I am a speed cuber, coder, and baseball player<br> I average about 17 seconds to solve a 3x3,
