--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </style>
     </head>
     <body>
-        <h1 id="title"> Timothy's <span id="cubing">Cubing</span> info</h1>
+        <h1 id="title"> Timothy's <span id="cubing">Cubing and random stuff</span> info</h1>
         <ul id="links">
             <li><a href="https://www.worldcubeassociation.org/persons/2024KEAR01" target="_blank"> All my current competition prs</a></li>
             <li><a href="https://www.youtube.com/channel/UCUrIcBNgiLD8e6289xnC6Jg" targe="_blank"> My cubing youtube channel</a></li>
