--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             #cat {
                 position: absolute;
                 right: 93px;
+                top: 70%;
             }
         </style>
     </head>
