--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 color:red;
             }
             #p {
-                position:fixed;
+                position:absolute;
                 right:20%;
                 top:100px;
                 font-family:cursive;
@@ -60,7 +60,10 @@
             #cat {
                 position: absolute;
                 right: 93px;
-                top: 70%;
+                top: 60%;
+            }
+            a {
+                border: 50px solid white;
             }
         </style>
     </head>
