--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 color:black;
             }
             #cat {
-                position: absolute;
+                position: fixed;
                 right: 93px;
                 top: 60%;
             }
