--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 background: rgb(85, 85, 85);
             }
             .sb-world-slideshow {
-                psoition: fixed;
+                position: fixed;
+                position: center;
             }
         </style>
     </head>
