--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
             }
             .sb-world-slideshow {
                 position: fixed;
-                position: center;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 50%;
             }
         </style>
     </head>
     <body>
         <div class="sb-world-slideshow">
-            <img src="https://i.ytimg.com/vi/XKCPXeV25xU/maxresdefault.jpg" alt="full netherite beacon in minecraft" width="1280" hight="720">
+            <img src="https://i.ytimg.com/vi/XKCPXeV25xU/maxresdefault.jpg" alt="full netherite beacon in minecraft" width="1280" hight="520">
         </div>
         
         <script>
