--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <script>
             $(document).ready(function(){
-                $('.your-class').slick({
+                $('.germany-slideshow').slick({
                     setting-name: setting-value
                 });
             });
