--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
                     setting-name: setting-value
                 });
             });
-            $('.single-item').slick();
+            $('.variable-width').slick({
+              dots: true,
+              infinite: true,
+              speed: 300,
+              slidesToShow: 1,
+              centerMode: true,
+              variableWidth: true
+            });
         </script>
     </body>
 </html>
