--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
               centerMode: true,
               variableWidth: true
             });
+            $('.autoplay').slick({
+              slidesToShow: 3,
+              slidesToScroll: 1,
+              autoplay: true,
+              autoplaySpeed: 2000,
+            });
         </script>
     </body>
 </html>
