--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 background: rgb(85, 85, 85);
             }
             #header {
+                text-align: center;
                 postiton: sticky;
                 top: 0;
                 background-color: black;
-                color: white;
                 padding-left: 500px;
                 padding-right: 500px;
                 padding-top: 35px;
@@ -31,10 +31,19 @@
                 margin-top: 300px;
                 margin-bottom: 300px;
             }
+            #grey {
+                color: grey;
+            }
+            #red {
+                color: red;
+            }
+            #yellow {
+                color: yellow;
+            }
         </style>
     </head>
     <body>
-        <h1 id="header">Travel to Germany!</h1>
+        <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany!</span></h1>
         <p>
             
         </p>
