--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </style>
     </head>
     <body>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg width="100%" hight="100%"">
         <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany!</span></h1>
         <p>
             
