--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 padding-bottom: 35px;
                 margin-top: 300px;
                 margin-bottom: 300px;
+                box-shadow: inset 0 0 5px black;
             }
             #grey {
                 color: grey;
@@ -43,7 +44,7 @@
         </style>
     </head>
     <body>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg width="100%" hight="100%"">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg" alt="German flag" width="100%" height="100%">
         <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany!</span></h1>
         <p>
             
