--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </head>
     <body>
         <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg" alt="German flag" width="100%" height="100%">
-        <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany!</span></h1>
+        <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! :)</span></h1>
         <p>
             
         </p>
