--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 margin-top: 300px;
                 margin-bottom: 300px;
                 box-shadow: inset 0 0 5px black;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             }
             #grey {
                 color: grey;
@@ -42,7 +43,8 @@
                 color: yellow;
             }
             body {
-                background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg');
+                background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg' width="100%" height="100%");
+                
             }
         </style>
     </head>
