--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </style>
     </head>
     <body>
-        <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! :)</span></h1>
+        <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span></h1>
         <p>
             
         </p>
