--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
             #yellow {
                 color: yellow;
             }
-            body {
-                background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg' width="100%" height="100%");
-                
+            #background {
+                width: 100%;
+                height: 100%;
             }
         </style>
     </head>
     <body>
+        <img id="background" src"https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg" alt="German flag">
         <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span></h1>
         <p>
             
