--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
             #yellow {
                 color: yellow;
             }
-            #background {
+            #background, img {
                 width: 100%;
                 height: 100%;
             }
         </style>
     </head>
     <body>
-        <img id="background" src"https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg" alt="German flag">
+        <div id="background">
+            <img src"https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg" alt="German flag">
+        </div>
         <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span></h1>
         <p>
             
