--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
                 box-shadow: inset 0 0 5px black;
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             }
+            .p1 {
+                text-align: center;
+                position: absolute;
+                background-color: red;
+                color: white;
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-top:10px;
+                padding-bottom: 10px;
+                margin-top: 20px;
+                margin-bottom: 20px;
+            }
             #grey {
                 color: grey;
             }
@@ -42,18 +54,14 @@
             #yellow {
                 color: yellow;
             }
-            #background, img {
-                width: 100%;
-                height: 100%;
+            body {
+                background-image: url("https://www.publicdomainpictures.net/pictures/250000/velka/german-flag.jpg")
             }
         </style>
     </head>
     <body>
-        <div id="background">
-            <img src"https://upload.wikimedia.org/wikipedia/commons/5/53/German_flag_(7664376100).jpg" alt="German flag">
-        </div>
         <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span></h1>
-        <p>
+        <p class="p1">
             
         </p>
 
