--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             }
             .p1 {
+		align:center;
                 text-align: center;
                 position: absolute;
                 background-color: red;
