--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             }
             .p1 {
-		align:center;
+		margin: auto;
+  		width: 60%;
                 text-align: center;
                 position: absolute;
                 background-color: red;
