--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
                 box-shadow: inset 0 0 5px black;
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             }
-            .p1 {
-		margin: auto;
-  		width: 60%;
+            .main-content {
                 text-align: center;
                 position: absolute;
                 background-color: red;
@@ -46,7 +44,10 @@
                 padding-bottom: 10px;
                 margin-top: 20px;
                 margin-bottom: 20px;
-            }
+		margin-left: 700px;
+		margin-right: 700px;   
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	    }
             #grey {
                 color: grey;
             }
@@ -90,6 +91,10 @@
               right: 0;
               border-radius: 3px 0 0 3px;
             }
+	    .prev {
+		left: 0;
+                border-radius: 3px 0 0 3px;
+	    }
 
             /* On hover, add a grey background color */
             .prev:hover, .next:hover {
@@ -111,7 +116,7 @@
     </head>
     <body>
         <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span></h1>
-        <div class="p1">
+        <div class="main-content">
             <p>
                 Welcome to Germany! Germany has many tourist attractions for anyone who may be <br>
                 considering visiting. Germany also has a rich history, beautiful castles, and great <br>
