--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 background: rgb(85, 85, 85);
             }
             #header {
-                text-align: center;
                 postiton: sticky;
                 top: 0;
+		text-align: center;
                 background-color: black;
                 padding-left: 500px;
                 padding-right: 500px;
@@ -30,7 +30,6 @@
                 padding-bottom: 35px;
                 margin-top: 300px;
                 margin-bottom: 300px;
-                box-shadow: inset 0 0 5px black;
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             }
             .main-content {
@@ -112,10 +111,15 @@
               text-align: center;
               font-size: 30px;
             }
+	    .paragraph {
+		    
+	    }
         </style>
     </head>
     <body>
-        <h1 id="header"><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span></h1>
+	<div id="header">
+		<h1><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span></h1>
+	</div>
         <div class="main-content">
             <p>
                 Welcome to Germany! Germany has many tourist attractions for anyone who may be <br>
