--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
               font-size: 30px;
             }
 	    .paragraph {
-		    
+		border: 10px ridge grey; 
+    		padding: 10px;
+    		font-family: calibri;
+    		text-shadow: 2px 2px 5px grey;
+    		font-size: 20px;
 	    }
         </style>
     </head>
@@ -121,10 +125,10 @@
 		<h1><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span></h1>
 	</div>
         <div class="main-content">
-            <p>
-                Welcome to Germany! Germany has many tourist attractions for anyone who may be <br>
-                considering visiting. Germany also has a rich history, beautiful castles, and great <br>
-                food. Speaking of food, here are some popular German foods and their German names.
+            <p class="paragraph">
+                Welcome to Germany! Germany has many tourist attractions for anyone who may be 
+                considering visiting. Germany also has a rich history, beautiful castles, and great 
+                food. Speaking of food, here are some popular German cakes (cake is very popular in Germany) and their German names.
             </p>
             <div class="slideshow-container">
   <div class="mySlides1">
@@ -145,7 +149,7 @@
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 </div>
-            <p>
+            <p class="paragraph">
                 Now, after eating those wonderful deserts, what is there to do now? <br> 
                 Well, I promise you, there is still lots to do. you can go sight <br>
                 seeing or go to a Fußball (soccer) game, which is Germany's most <br>
@@ -170,7 +174,7 @@
   <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
-            <p>
+            <p class="paragraph">
 	I hope all of this information has made you at least appreciate <br>
     all the amazing things Germany has to offer. Thank you for reading!<br>
     														
