--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             .slideshow-container {
                 max-width: 1000px;
                 position: relative;
-                margin: auto;
+                margin: 20%;
             }
 
             /* Next & previous buttons */
