--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             /* Slideshow container */
             .slideshow-container {
                 max-width: 1000px;
+		border: 10px ridge grey;
                 position: relative;
-                margin: 20%;
+                margin: auto;
             }
 
             /* Next & previous buttons */
@@ -112,7 +113,7 @@
               font-size: 30px;
             }
 	    .paragraph {
-		border: 10px ridge grey; 
+		border: 10px ridge grey;
     		padding: 10px;
     		font-family: calibri;
     		text-shadow: 2px 2px 5px grey;
