--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
 	</div>
         <div class="main-content">
             <p class="paragraph">
-                Welcome to Germany! Germany has many tourist attractions for anyone who may be 
-                considering visiting. Germany also has a rich history, beautiful castles, and great 
-                food. Speaking of food, here are some popular German cakes (cake is very popular in Germany) and their German names.
+                Welcome to Germany! Germany has many tourist attractions for anyone <br> 
+                who may be considering visiting. Germany also has a rich history, beautiful <br>
+                castles, and great food. Speaking of food, here are some popular German cakes <br> 
+		(cake is very popular in Germany) and their German names.
             </p>
             <div class="slideshow-container">
   <div class="mySlides1">
