--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </head>
     <body>
 	<div id="header">
-		<h1><span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span></h1>
+		<span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span>
 	</div>
         <div class="main-content">
             <p class="paragraph">
