--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 top: 0;
 		text-align: center;
                 background-color: black;
+		font-size: 50px;
                 padding-left: 500px;
                 padding-right: 500px;
                 padding-top: 35px;
