--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             ::-webkit-scrollbar-thumb:hover {
                 background: rgb(85, 85, 85);
             }
-            #header {
+            div.header {
                 postiton: sticky;
                 top: 0;
 		text-align: center;
@@ -49,12 +49,18 @@
 		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	    }
             #grey {
+		position: sticky;
+		top: 0;
                 color: grey;
             }
             #red {
+		position: sticky;
+		top: 0;
                 color: red;
             }
             #yellow {
+		position: sticky;
+		top: 0;
                 color: yellow;
             }
             body {
@@ -123,7 +129,7 @@
         </style>
     </head>
     <body>
-	<div id="header">
+	<div class="header">
 		<span id="grey">Travel</span><span id="red"> to </span><span id="yellow">Germany! </span>
 	</div>
         <div class="main-content">
