--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="slideshow-container">
   <div class="mySlides1">
     <img src="https://images.eatsmarter.de/sites/default/files/styles/facebook/public/klassischer-kaesekuchen-55477.jpg" alt="Käsekuchen" style="width:100%">  
-    <div class="text">Käsekuchen: Kind of like cheesecake</div>
+    <div class="text">Käsekuchen or cheesecake</div>
     </div>
 
   <div class="mySlides1">
