--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
   		position: sticky;
   		top: 0;
   		background-color: black;
+		text-align: center;
   		padding-top: 10px;
   		padding-bottom: 10px;
   		padding-right: 300px;
   		padding-left: 300px;
+		margin-top: 100px;
+		margin-bottom: 100px;
   		font-size: 50px;
   		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	    }
