--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+	<link rel="icon" type="image/png" href="Flag_of_Germany.svg.png">
         <title>Travel to Germany!</title>
         <style>
             ::-webkit-scrollbar {
