--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </head>
     <body>
 	    
-	<div class="sticky"><span id="grey">Travel</span> <span id="red">to</span> <span id="yellow">Germany!:)</span></div>
+	<div class="sticky"><span id="grey">Travel</span> <span id="red">to</span> <span id="yellow">Germany!</span></div>
 	    
         <div class="main-content">
             <p class="paragraph">
