--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 	    .paragraph {
 		border: 10px ridge grey;
     		padding: 10px;
+		margin: 15px;
     		font-family: calibri;
     		text-shadow: 2px 2px 5px grey;
     		font-size: 20px;
@@ -215,13 +216,14 @@
     														
                                                               -Timothy K
 </p>
-        </div>
 
-	    <div class="paragraph">
+		<div class="paragraph">
 		    <a href="https://www.tripadvisor.com/Attraction_Products-g187275-zfg11878-a_contentId.1183074870402842+268395811-Germany.html"> Check out a site with pleanty more things to do in Germany!</a>
 		    <a href="https://www.chefspencil.com/most-popular-24-german-foods/">Check out some more popular german foods!</a>
 		    <a href="https://ontheworldmap.com/germany/">A detailed map of Germany</a>
 	    </div>
+        </div>
+
         <script>
             let slideIndex = [1,1];
             let slideId = ["mySlides1", "mySlides2"]
