--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     		text-shadow: 2px 2px 5px grey;
     		font-size: 20px;
 	    }
-	    a:hover {
+	    link:hover {
 		border: 10px ridge grey;
     		padding: 10px;
 		background-color: yellow;
@@ -217,10 +217,10 @@
                                                               -Timothy K
 </p>
 
-		<div class="paragraph">
-		    <a href="https://www.tripadvisor.com/Attraction_Products-g187275-zfg11878-a_contentId.1183074870402842+268395811-Germany.html"> Check out a site with pleanty more things to do in Germany!</a>
-		    <a href="https://www.chefspencil.com/most-popular-24-german-foods/">Check out some more popular german foods!</a>
-		    <a href="https://ontheworldmap.com/germany/">A detailed map of Germany</a>
+	    <div class="paragraph">
+		    <a class="link" href="https://www.tripadvisor.com/Attraction_Products-g187275-zfg11878-a_contentId.1183074870402842+268395811-Germany.html"> Check out a site with pleanty more things to do in Germany!</a>
+		    <a class="link" href="https://www.chefspencil.com/most-popular-24-german-foods/">Check out some more popular german foods!</a>
+		    <a class="link" href="https://ontheworldmap.com/germany/">A detailed map of Germany</a>
 	    </div>
         </div>
 
