--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
     		text-shadow: 2px 2px 5px grey;
     		font-size: 20px;
 	    }
-	    link:hover {
-		border: 10px ridge grey;
+	    a:hover {
+		border: 5px ridge grey;
     		padding: 10px;
 		background-color: yellow;
 		font-size: 30;
