--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
 </p>
 
 	    <div class="paragraph">
-		    <a class="link" href="https://www.tripadvisor.com/Attraction_Products-g187275-zfg11878-a_contentId.1183074870402842+268395811-Germany.html"> Check out a site with plenty more things to do in Germany!</a>
-		    <a class="link" href="https://www.chefspencil.com/most-popular-24-german-foods/">Check out some more popular German foods!</a>
-		    <a class="link" href="https://ontheworldmap.com/germany/">A detailed map of Germany</a>
+		    <a class="link" href="https://www.tripadvisor.com/Attraction_Products-g187275-zfg11878-a_contentId.1183074870402842+268395811-Germany.html" target="_blank"> Check out a site with plenty more things to do in Germany!</a>
+		    <a class="link" href="https://www.chefspencil.com/most-popular-24-german-foods/" target="_blank">Check out some more popular German foods!</a>
+		    <a class="link" href="https://ontheworldmap.com/germany/" target="_blank">A detailed map of Germany</a>
 	    </div>
         </div>
 
