--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 </div>
             <p class="paragraph">
-                Now, after eating those wonderful deserts, what is there to do now? <br> 
+                Now, after eating those wonderful foods, what is there to do now? <br> 
                 Well, I promise you, there is still lots to do. You can go sight <br>
                 seeing or go to a Fußball (soccer) game, which is Germany's most <br>
                 popular sport.
