--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
 </p>
 
 	    <div class="paragraph">
-		    <a class="link" href="https://travel.usnews.com/rankings/best-places-to-visit-in-germany/" target="_blank"> Check out a site with plenty more things to do in Germany!</a>
-		    <a class="link" href="https://www.chefspencil.com/most-popular-24-german-foods/" target="_blank">Check out some more popular German foods!</a>
-		    <a class="link" href="https://ontheworldmap.com/germany/" target="_blank">A detailed map of Germany</a>
+		    <a class="link" href="https://travel.usnews.com/rankings/best-places-to-visit-in-germany/" target="_blank"> Check out a site with plenty more things to do in Germany!</a> <br>
+		    <a class="link" href="https://www.chefspencil.com/most-popular-24-german-foods/" target="_blank">Check out some more popular German foods!</a> <br>
+		    <a class="link" href="https://ontheworldmap.com/germany/" target="_blank">A detailed map of Germany</a> <br>
 	    </div>
         </div>
 
