--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
 		    <a class="link" href="https://www.chefspencil.com/most-popular-24-german-foods/" target="_blank">Check out some more popular German foods!</a> <br>
 		    <br>
 		    <a class="link" href="https://ontheworldmap.com/germany/" target="_blank">A detailed map of Germany</a> <br>
+		    <br>
+		    <a class="link" href="https://en.wikipedia.org/wiki/World_War_II" target="_blank">Germany history...</a> <br>
 	    </div>
         </div>
 
